# app/backend/src/controllers/tasks/implementation/add-task.impl.ts
@@ -1,0 +1,8 @@
+import { addTaskBody } from "interfaces/add-task.interface";
+import { Task } from "models/task.model";
+
+const addTask = async (taskBody: addTaskBody): Promise<any> => {
+  const task: any = await Task.create(taskBody);
+  return task;
+};
+export default addTask;
